--- a/package.json
+++ b/package.json
@@ -6,21 +6,39 @@
   "scripts": {
     "server": "nodemon api",
     "build": "webpack",
-    "dev": "webpack-dev-server"
+    "dev": "webpack-dev-server --history-api-fallback"
   },
   "author": "letobev",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.9.6",
+    "@babel/plugin-transform-runtime": "^7.9.6",
+    "@babel/preset-env": "^7.9.6",
+    "@babel/preset-react": "^7.9.4",
+    "babel-loader": "^8.1.0",
     "html-webpack-plugin": "^4.3.0",
     "nanoid": "^3.1.3",
     "nodemon": "^2.0.3",
     "swagger-ui-express": "^4.1.4",
+    "url-loader": "^4.1.0",
     "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11"
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
+    "@babel/runtime": "^7.9.6",
+    "axios": "^0.19.2",
     "bcrypt": "^4.0.1",
+    "css-loader": "^3.5.3",
     "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1"
+    "jsonwebtoken": "^8.5.1",
+    "mini-css-extract-plugin": "^0.9.0",
+    "mongodb": "^3.5.7",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-icons": "^3.10.0",
+    "react-router-dom": "^5.1.2",
+    "style-loader": "^1.2.1",
+    "styled-components": "^5.1.0"
   }
 }
